--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.0",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
+    "@types/redux-form": "^8.3.1",
+    "antd": "^4.15.5",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "react": "^16.14.0",
@@ -16,7 +22,8 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
